[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.rstcheck]
report_level = "WARNING"
ignore_directives = ["autoclass", "autofunction"]


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pycodestyle = "^2.12.1"
rstcheck = "^6.2.4"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
build = "^1.2.2.post1"
tox = "^4.24.1"
isort = "^6.0.0"


[project]
name = "life"
version = "0.1.2.dev"
authors = [
    {name="Paul J. Iutzi", email="pji@mac.com"},
]
description = "Another implementation of Conway's Game of Life."
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'blessed',
]


[project.urls]
"Homepage" = "https://github.com/pji/life"
"Documentation" = "https://github.com/pji/life"
"Source" = "https://github.com/pji/life"


[tool.setuptools.package-data]
life = ['pattern/*',]


[project.scripts]
life = "life.__main__:main"
